added 250dd model, reorganized data

--- a/bigdata/.gitignore
+++ b/bigdata/.gitignore
@@ -10,3 +10,5 @@ pooled_conv2d_model
 pooled_conv_model_m
 pooled_conv2d_model_250
 pooled_conv2d_model_2506
+pooled_conv2d_model_250d
+pooled_conv2d_model_250dd
